--- a/src/pages/english/theory.mdx
+++ b/src/pages/english/theory.mdx
@@ -163,3 +163,89 @@ _Yahoo! Directory, Open Directory_ and _LookSmart_ can serve as good examples of
 ##### Meta-Search Engines
 A meta-search engine does not have a database of indexed pages of its own. Instead, it sends users’ queries to several other search engines and compiles top results from each into one overall list. After redundancy removal, these results are processed, ranked and presented to the user. _Dogpile, MetaCrawler,_ and _SavvySearch_ are a few examples of such meta-search engines.
 
+#### 12. Web design
+
+**Термины:**
+
+1. Cascading Style Sheets *(CSS)* — каскадные таблицы стилей;
+2. WYSIWYG *(What You See Is What You Get)* — визуальный редактор;
+3. Frame – рамка, окно;
+4. Page source code — исходный код страницы;
+5. HyperText Markup Language *(HTML)* — язык гипертекстовой разметки;
+6. eXtensible Markup Language *(XML)* — расширяемый язык разметки;
+7. Web editor — веб-редактор;
+8. Hyperlink — гиперссылка;
+9. RSS feeds — потоки новостей, анонсов;
+10. Subscribers — подписчики;
+11. Background templates — шаблоны фона;
+12. Printable Document Format *(PDF)* — печатаемый формат документа;
+13. Font — шрифт;
+14. Wallpaper — обои;
+15. Transparent images — прозрачные изображения;
+16. Search Engine — поисковик;
+17. Information System of Personal Data *(ISPD)* — информационная система персональных данных;
+18. to erase — стирать (данные);
+19. to edit — редактировать;
+20. template — шаблон;
+21. Streaming video — потоковое видео;
+22. Search Engine Optimization *(SEO)* – поисковая оптимизация;
+
+**Текст по теме:**
+
+If you are learning web development, you will come across terms like HTML, CSS, and JavaScript. These three tools dominate web development.
+
+**Hypertext Markup Language**, or **HTML**, is a code used to describe the structure of information on a webpage. HTML consists of commands called tags which are placed around different kinds of contents (e.g. tables, paragraphs, lists, hyperlinks, images, videos, etc.) telling the web browser how to display them.
+
+**CSS** also known as **Cascading Style Sheets** is a design mechanism whose primary function is to improve the appearance of a webpage by defining its styling and layout. CSS provides a way to define and apply styles consistently across all pages of a website, making it easier for developers to maintain and update their designs.
+
+**JavaScript,** which is often abbreviated to **JS**, is another core technology of the World Wide Web. JS is a cross-platform, object-oriented programming language used by developers to make web pages interactive, intuitive and user-friendly. It allows developers to create dynamically updating content, use animations, pop-up menus, clickable buttons, etc. Whereas HTML & CSS are used to control presentation, formatting, and layout, JavaScript is used to control the behavior of different web elements. Without JavaScript, 90% of Internet webpages would be static.
+
+#### 13. Malware and cybercrime
+
+1. Misdirection routine — процедура дезориентации;
+2. Reproduction routine — процедура самокопирования;
+3. Trigger — запуск, активация вируса;
+4. Payload — полезная нагрузка (боевая нагрузка) вируса;
+5. Freeware — бесплатные ПО;
+6. Shareware — условно бесплатное ПО;
+7. Malware — вредоносное ПО;
+8. Adware — рекламное ПО;
+9. Ransomware — программы-вымогатели;
+10. Backdoor — бэкдор, тайный вход;
+11. Сybercrime — киберпреступность;
+12. Distributed Denial of Service *(DDoS)* — распределенная атака отказа в обслуживании;
+13. to encrypt data — шифровать данные;
+14. Firewall — фаервол;
+15. Hacker — хакер;
+16. IP spoofing — подмена IP-адреса;
+17. Overwriting virus — перезаписывающий вирус;
+18. Keylogger — кейлоггер;
+19. Phishing — фишинг;
+20. Piggybacking — несанкционированный доступ к беспроводной сети без разрешения её администраторов;
+21. Salami shaving — небольшая атака, повторяемая множество раз;
+22. Security measures — меры защиты;
+23. Spyware — шпионские программы;
+24. Trojan — троян;
+25. Unauthorized access — неавторизованный доступ;
+26. Unwanted request — нежелательный запрос;
+27. Worm — червь;
+28. to spread viruses — распространять вирусы;
+29. to run an infected program — запускать заражённую программу;
+
+**Текст по теме:**
+
+There are many benefits from an open system like the Internet, but one of the risks is that we are often exposed to **hackers**, who break into computer systems just for fun, to steal information, or to spread viruses. So how do we go about making our online transactions secure?
+
+Security is crucial when you send confidential information online. Consider, for example, the process of buying a book on the Web. You have to type your credit card number into an order form which passes from computer to computer on its way to the online bookstore. If one of the intermediary computers is infiltrated by hackers, your data can be copied.
+
+To avoid risks, you should set all security alerts to high on your web browser. Mozilla Firefox displays a lock when the website is secure and allows you to disable or delete **cookies** - small files placed on your hard drive by web servers so that they can recognize your PC when you return to their site.
+
+If you use online banking services, make sure they use **digital certificates** - files that are like digital identification cards and that identify users and web servers. Also be sure to use a browser that is compliant with SSL (Secure Sockets Layer), a protocol which provides secure transactions.
+
+Similarly, as your email travels across the Net, it is copied temporarily onto many computers in between. This means that it can be read by people who illegally enter computer systems. The only way to protect a message is to put it in a sort of virtual envelope - that is, to encode it with some form of **encryption**.
+
+Private networks can be attacked by intruders who attempt to obtain information such as Social Security numbers, bank accounts or research and business reports. To protect crucial data, companies hire security consultants who analyze the risks and provide solutions. The most common methods of protection are **passwords** for access control, **firewalls**, and **encryption** and **decryption** systems. Encryption changes data into a secret code so that only someone with a key can read it. Decryption converts encrypted data back into its original form.
+
+**Malware** (malicious software) are programs designed to infiltrate or damage your computer, for example **viruses**, **worms**, **Trojans** and **spyware**. A virus can enter a PC via an infected USB flash drive or via the Internet. A worm is a self-copying program that spreads through email attachments; it replicates itself and sends a copy to everyone in an address book. A Trojan horse is disguised as a useful program; it may affect data security. Spyware collects information from your PC without your consent.
+
+Most spyware and **adware** (software that allows pop-ups - that is, advertisements that suddenly appear on your screen) is included with 'free' downloads. If you want to protect your PC, don't open email attachments from strangers and take care when downloading files from the Web. Remember to update your **anti-virus** **software** as often as possible, since new viruses are being created all the time.
