--- a/src/pages/probabilities/theory.mdx
+++ b/src/pages/probabilities/theory.mdx
@@ -5,4 +5,195 @@ icon: cards
 subheader: кафедра высшей математики-3
 ---
 
-🐭
+#### 1. Классическая вероятность
+**Задание:**
+Из колоды 52 карт наугад выбираются 3 карты. С какой вероятностью это будут «шестёрка», «десятка» и «валет»?
+
+**Решение:**
+Множество элементарных исходов $\Omega$ состоит из всех возможных троек, выбранных из 52 карт. Мощность этого множества равна:
+
+$$
+\lvert \Omega \rvert = C_{52}^{3} = \frac{52!}{3!(52 - 3)!} = \frac{52 \cdot 51 \cdot 50 \dots1}{3 \cdot 2 \cdot 49!} = \frac{52 \cdot 51 \cdot 50 \cdot 49!}{3 \cdot 2 \cdot 49!} = \frac{52 \cdot 51 \cdot 50}{3 \cdot 2} = \frac{132600}{6} = 22100
+$$
+Интересующее нас событие $A$, состоящее в выпадении «шестёрки», «десятки» и «валета» имеет мощность:
+
+$$
+\lvert A \rvert = C_{4}^{1} \cdot C_{4}^{1} \cdot C_{4}^{1} = 3 \cdot C_{4}^{1} = 4^3 = 64
+$$
+
+Вероятность события $A$ вычисляем по классической формуле:
+
+$$
+P(A) = \frac{\lvert A \rvert}{\lvert \Omega \rvert} = \frac{64}{22100} \approx 0.029
+$$
+
+**Ответ:** $0.029$
+
+#### 2. Геометрическая вероятность
+**Задание:**
+Пусть выбирается наугад точка в единичном квадрате. С какой вероятностью она окажется внутри вписанного в этот квадрат круга?
+
+**Решение:**
+Используем геометрическую формулу вероятности. Вероятность события $A$, то есть попадания точки в нужную область, есть отношение площади нужной фигуры $\lvert A \rvert$ к площади всей фигуры $\lvert \Omega \rvert$. Площадь единичного квадрата — 1. Радиус круга — $\frac{1}{2}$.
+
+$$
+P(A) = \frac{\lvert A \rvert}{\lvert \Omega \rvert} = \frac{\pi (\frac{1}{2})^2}{1} = \pi \cdot \frac{1}{4} = \frac{\pi}{4}
+$$
+
+**Ответ:** $\frac{\pi}{4}$
+
+#### 3. Условная вероятность
+**Задание:**
+Из фразы «Жили у бабуси два веселых гуся» наугад выбирается буква (пробелы не считать). С какой вероятностью это будет буква «и» при условии, что эта буква гласная?
+
+**Решение:**
+Множество элементарных исходов $\Omega$ содержит 25 исходов (все буквы с учетом повторов). Рассмотрим событие $A$, что выпадет буква «и», и событие $B$, что выпадет гласная буква. Необходимо вычислить условную вероятность:
+
+$$
+P(A|B) = \frac{P(AB)}{P(B)}
+$$
+
+Вероятности событий $A$ и $B$ вычисляем по классической схеме:
+
+$$
+P(AB) = P(A) = \frac{3}{25}
+$$
+$$
+P(B) = \frac{12}{25}
+$$
+$$
+P(A|B) = \frac{\frac{3}{25}}{\frac{12}{25}} = \frac{3 \cdot 25}{12 \cdot 25} = \frac{3}{12} = \frac{1}{4}
+$$
+
+**Ответ:** $0.25$
+
+#### 4. Матожидание дискретной случайной величины
+**Задание:**
+Пусть дискретная случайная величина $\xi$ задана следующей таблицей:
+
+|       | 1     | 2     | 3     | 4     |
+| ----- | ----- | ----- | ----- | ----- |
+| $\xi$ | $1$   | $-3$  | $4$   | $-6$  |
+| $p$   | $0.3$ | $0.1$ | $0.4$ | $0.2$ |
+Найти математическое ожидание случайной величины $\xi$.
+
+**Решение:**
+Найдем математическое ожидание этой величины по формуле:
+
+$$
+E[\xi] = 1 \cdot 0.3 -3 \cdot 0.1 + 4 \cdot 0.4 -6 \cdot 0.2 = 0.3 - 0.3 + 1.6- 1.2 = 0.4
+$$
+
+**Ответ:** $0.4$
+
+#### 5. Дисперсия случайной величины
+**Задание:**
+Найти дисперсию случайной величины из задачи №4.
+
+**Решение:**
+Дисперсия случайной величины $\xi$ — это математическое ожидание от случайной величины $(\xi - E[\xi])^2$. Для этой случайной величины построим аналогичную таблицу:
+
+|                    | 1      | 2       | 3       | 4       |
+| ------------------ | ------ | ------- | ------- | ------- |
+| $(\xi - E[\xi])^2$ | $0.36$ | $11.56$ | $12.96$ | $40.96$ |
+| $p$                | $0.3$  | $0.1$   | $0.4$   | $0.2$   |
+Теперь найдем математическое ожидание этой величины по формуле:
+
+$$
+E[(\xi - E[\xi])^2] = 0.36 \cdot 0.3 + 11.56 \cdot 0.1 + 12.96 \cdot 0.4 + 40.96 \cdot 0.2 = 0.108 + 1.156 + 5.184 + 8.192 = 14.64
+$$
+
+**Ответ:** $14.64$
+
+#### 6. Гауссовская случайная величина
+**Задание:**
+Случайная величина имеет следующую плотность вероятности:
+$$
+f(x) = \frac{1}{3 \sqrt{2\pi}} e^{-\frac{1}{2} (\frac{x+6}{3})^2}
+$$
+
+Как называется эта случайная величина, и какое она имеет математическое ожидание?
+
+**Решение:**
+Эта случайная величина называется *нормальной* или *Гауссовсой*. Из вида плотности случайной величины получаем, что:
+
+$$
+E[\xi] = -6
+$$
+
+**Ответ:** нормальная, $-6$
+
+#### 7. Абсолютно непрерывная случайная величина
+**Задание:**
+Пусть случайная величина $\xi$ имеет следующую плотность вероятности:
+$$
+f(x) =
+\begin{cases}
+1/8, x \in [10, 18],\\
+0, x \notin [10, 18]
+\end{cases}
+$$
+Найти математическое ожидание $E[\xi]$.
+
+**Решение:**
+Случайная величина $\xi$ является *абсолютно непрерывной случайной величиной*, её математическое ожидание можно найти по формуле:
+
+$$
+E[\xi] = \int_{-\infty}^{\infty}xf(x)dx = \frac{1}{8}\int_{10}^{18}xdx = \frac{1}{16}x^2\vert_{10}^{18} = \frac{1}{16}\cdot (18^2 - 10^2) = \frac{224}{16} = 14
+$$
+
+**Ответ:** $14$
+
+#### 8. Выборочное математическое ожидание
+**Задание:**
+Пусть имеется следующая выборка:
+
+$$
+X = (-5, 2, -3, 0, 5)
+$$
+
+Найти выборочное математическое ожидание.
+
+**Решение:**
+Найдем выборочное математическое ожидание (выборочное среднее) по формуле:
+
+$$
+x = \frac{-5 + 2 -3 + 0 + 5}{5} = \frac{-1}{5}
+$$
+**Ответ:** $-0.2$
+
+#### 9. Выборочная дисперсия
+**Задание:**
+Найти выборочную дисперсию по выборке из задачи №8.
+
+**Решение:**
+Вычислим выборочную дисперсию по формуле:
+
+$$
+S_{5}^{2} = \frac{1}{5}[(-5 + 0.2)^2 + (2 + 0.2)^2 + (-3 + 0.2)^2 + (0 + 0.2)^2 + (5 + 0.2)^2] = \frac{1}{5}(-4.8^2 + 2.2^2 - 2.8^2 + 0.2^2 + 5.2^2) =
+$$
+$$
+= \frac{1}{5}(23.04 + 4.84 + 7.84 + 0.04 + 27.04) = \frac{1}{5} \cdot 62.8 = 12.56
+$$
+
+**Ответ:** $12.56$
+
+### Демонстрационный билет №1
+
+#### 1.
+**Задание:**
+В урне 12 белых и 8 черных шаров. Из урны вынимают наугад сразу два шара. Найти вероятность того, что оба шара будут разных цветов.
+
+**Решение:**
+Всего в урне 20 шаров.
+Вероятность того, что первый шар будет белым — $X_{1б} = \frac{12}{20} = \frac{3}{5}$.
+Вероятность того, что первый шар будет черным — $X_{1ч} = \frac{8}{20} = \frac{2}{5}$.
+Вероятность того, что второй шар будет белым — $X_{2б} = \frac{12}{19}$.
+Вероятность того, что второй шар будет черным — $X_{2ч} = \frac{8}{19}$.
+
+Итоговая вероятность:
+$$
+X = X_{1ч} \cdot X_{2б} + X_{1б} \cdot X_{2ч} = \frac{2}{5} \cdot \frac{12}{19} + \frac{3}{5} \cdot \frac{8}{19} = \frac{24}{95} + \frac{24}{95} = \frac{48}{95}
+$$
+
+**Ответ:** $\frac{48}{95}$
